--- a/package.json
+++ b/package.json
@@ -19,8 +19,18 @@
   },
   "homepage": "https://github.com/rojasedwin/sigesop#readme",
   "dependencies": {
+    "@admin-bro/express": "^3.1.0",
+    "@admin-bro/mongoose": "^1.1.0",
+    "admin-bro": "^4.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mysql": "^2.18.1"
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.3",
+    "mongoose": "^6.4.3",
+    "mysql": "^2.18.1",
+    "tslib": "^2.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
