--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@admin-bro/mongoose": "^1.1.0",
     "admin-bro": "^4.0.1",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
