--- a/env/.env
+++ b/env/.env
@@ -2,3 +2,12 @@ DB_HOST='us-cdbr-east-05.cleardb.net'
 DB_USER='bf7ce2d52f141a'
 DB_PASS='4a1944fd'
 DB_DATABASE='heroku_a1f7b4e8dda28ba'
+
+//set password for the JWT
+JWT_SECRETO = password_super_secret
+
+//set time the token expires
+JWT_EXPIRATION_TIME = 7d
+
+//set time the cookie expires
+JWT_COOKIE_EXPIRES = 90
