--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.4.3",
     "mysql": "^2.18.1",
     "tslib": "^2.4.0"
