--- a/env/.env
+++ b/env/.env
@@ -1,7 +1,7 @@
-DB_HOST='us-cdbr-east-05.cleardb.net'
-DB_USER='bf7ce2d52f141a'
-DB_PASS='4a1944fd'
-DB_DATABASE='heroku_a1f7b4e8dda28ba'
+DB_HOST='containers-us-west-74.railway.app'
+DB_USER='root'
+DB_PASS='DIX3B1zsVBfzbNP8SeUA'
+DB_DATABASE='railway'
 
 //set password for the JWT
 JWT_SECRETO = password_super_secret
